一旦文章あがり(コンパイル可能性は未確認)

--- a/KOMABA2016/yamamoto.tex
+++ b/KOMABA2016/yamamoto.tex
@@ -3,6 +3,7 @@
 %実際に確認する際は,各自の環境でmain.texにこのプリアンブルを追加してください.
 
 %\usepackage{mathrsfs}
+%\usepackage{amsmath}
 %\usepackage[all]{xy}
 %\newcommand{\proofend}{\begin{flushright} $\blacksquare$ \end{flushright}}
 %\renewcommand{\labelenumi}{(\roman{enumi})}
@@ -58,11 +59,88 @@ $Section{1.三角関数とFourier級数展開}
 この主張は元々熱伝導に関する問題を解く際に用られたものであり，主張を認めればその問題の解にたどり着くことができたのでした．Fourierによるこの大胆な主張は，真偽が定かでなかったために数学界に議論を巻き起こしましたが，結果的には「大体」正しい主張であったことが後に分かります．
 主張がどこまで正しいのか・また正しいとして，その無限和の収束やふるまいは良いものか？という当時の問いは，その後の解析学，ひいては数学そのものを大きく発展させたと言われています．
 
-さて，Fourier級数展開の具体的な主張を見てみましょう．(以下節末まで未完．大まかな方針だけ以下に述べます．)
+さて，Fourier級数展開の具体的な主張を見てみましょう．
+\begin{center}
+$f(x)$を「性質の良い」周期$2 \pi$の関数とする．
+このとき，
+\begin{equation}
+	f(x)=a_{0}+\sum_{n=1}^{\infty}\left( a_{n}\cos(nx)+b_{n}\sin (nx) \right)
+	\label{f1}
+\end{equation}
+となるような実数$a_n, b_n$($n$は自然数)が存在する．
+\end{center}
+ここで，「性質の良い」というのは，例えば「定義域全体で微分可能で，さらに導関数も連続」などが相当します．
+上に出てきた各係数$a_n, b_n$は，大雑把には次のように計算されます．
+まず$a_0$については，(\f1)の両辺を$x$について$0$から$2 \pi$まで積分して
+\begin{eqnarray*}
+	\int_{0}^{2 \pi}f(x)dx &=& \int_{0}^{2\pi} \left( a_{0}+\sum_{n=1}^{\infty}\left( a_{n}\cos(nx)+b_{n}\sin (nx) \right) \right) dx \\
+	&=& \int_{0}^{2 \pi} a_{0} dx +\sum_{n=1}^{\infty} \int_{0}^{2\pi}\left( a_{n}\cos(nx)+b_{n}\sin (nx) \right) \right) dx \\
+	&=& 2\pi a_{0}+0=2 \pi a_{0}
+\end{eqnarray*}
+すなわち
+\[
+	a_0=\frac{1}{2\pi}\int_{0}^{2 \pi}f(x)dx
+\]
+を得ます．正の整数$m$に対する$a_m$については，次の公式
+\begin{eqnarray*}
+	\int_{0}^{2 \pi} \cos (nx) \cos (mx) &=&
+	\begin{cases}
+		\pi & (n=m) \\
+		0 & (n \neq m) \\
+	\end{cases}
+	\\
+	\int_[0}^{2 \pi} \cos (nx) \sin (mx) &=& 0
+\end{eqnarray*}
+を使えば，次のように計算できます．
+(\f1)の両辺に$\cos mx$をかけ，それを$x$について$0$から$2 \pi$まで積分すると
+\begin{eqnarray*}
+	\int_{0}^{2 \pi} \cos (mx) f(x) dx &=& \int_{0}^{2 \pi} \cos (mx)\left( a_{0}+\sum_{n=1}^{\infty}\left( a_{n}\cos(nx)+b_{n}\sin (nx) \right) \right) dx \\
+	&=& \int_{0}^{2 \pi} a_{0} \cos (mx) dx +\sum_{n=1}^{\infty} \int_{0}^{2\pi} \cos (mx)\left( a_{n}\cos(nx)+b_{n}\sin (nx) \right) \right) dx \\
+	&=& \pi a_{m}
+\end{eqnarray*}
+を得ます．すなわち，$m \ge 1$に対して
+\[
+	a_{m}=\frac{1}{\pi} \int_{0}^{2 \pi} \cos (mx) f(x) dx
+\]
+となります．同様にして，$b_m$も
+\[
+	b_{m}=\frac{1}{\pi} \int_{0}^{2 \pi} \sin (mx) f(x) dx
+\]
+と計算できることになります．これで，係数が計算できました．
 
-この各係数は，大雑把には次のように計算されます．
+それでは，とある関数を実際に三角関数の無限和で表してみましょう．
 
-具体例を1つ見てみましょう．(といいながらFourier展開を使ってバーゼル級数の値を導く)
+周期$2 \pi$の関数$f(x)$を，$0 \le x \le 2\pi$において$f(x)=-x(x-2 \pi)$となるように定めます．
+これは$x=2\pi n$($n$は整数)において微分可能ではありませんが，先に述べた「性質の良い」関数の1つです．
+これを認めれば，積分計算により$a_0, a_n, b_n$を求めてやることで$f(x)$を三角関数に表すことが出来ます．
+実際に計算してみると(部分積分を使えば高校生にもできる計算ですので，やってみてください)，
+\begin{eqnarray*}
+	a_0 &=& \frac{2}{3}\pi ^2 \\
+	a_n &=& -\frac{4}{n^2} \\
+	b_n &=& 0
+\end{eqnarray*}
+となるので，結局
+\[
+	f(x)=\frac{2}{3}\pi ^2-\sum_{n=1}^{\infty} \frac{4}{n^2} \cos (mx)
+\]
+と表すことができました．
+
+さて，上式に$x=0$を代入してみましょう．
+すると
+\[
+	0=\frac{2}{3}\pi ^2-\sum_{n=1}^{\infty} \frac{4}{n^2}
+\]
+となり，適当に整理すると
+\[
+	\sum_{n=1}^{\infty} \frac{1}{n^2} = \frac{\pi ^2}{6}
+\]
+となりました．
+これはすなわち，「自然数の二乗の逆数の和が$\pi ^2 /6$になる」ということを意味しています．
+左辺は整数に関する基本的な級数になっているわけですが，その値として$\pi$がひょこっと現れるという不思議な公式が出来てしまいました．
+この級数は「Basel級数」と呼ばれています．
+
+他にも，Fourier級数展開を使うと導ける級数は色々あります．
+関数を色々変えてみて，様々な公式を作ってみるのも興味深いかと思います．
 
 \Section{$\zeta$ 関数，$\Gamma$関数と関数等式}
 
@@ -75,7 +153,7 @@ $Section{1.三角関数とFourier級数展開}
 \]
 により定義します．
 ここで「$1$より大きい実数」と言ったのは，$1$以下の実数では定義式の級数が発散してしまうことを考慮してのことです．
-この$\zeta$関数の定義式から，前章のバーゼル級数は$\zeta (2)$に相当します．
+この$\zeta$関数の定義式から，前章のBasel級数は$\zeta (2)$に相当します．
 実は，正の偶数$n$に対して，$\zeta (n)$は$\pi ^{n}$と有理数の積の形をしていることが知られています．
 
 「正の偶数」という規則正しい数値を代入すると$\pi$に関係する値を返す$\zeta$関数ですが，この関数まわりで$\pi$が出てくるのは，関数に何かしらの値を代入するときだけではありません．
