伊藤くんの原稿を微調整

--- a/KOMABA2016/ito.tex
+++ b/KOMABA2016/ito.tex
@@ -105,9 +105,9 @@ $1/12 \fallingdotseq 0.083$％づつ1ヶ月に1回お金が増える
 \]
 という風になります.同様に,$12$回払いの場合も
 \[
-100\mbox{万円} \times (1 + \frac{0.01}{12}) \times  \cdots \times (1 +  \frac{0.01}{12}) = 100\mbox{万円} \times (1 + \frac{0.01}{12})^{12} = 101.004596089
+100\mbox{万円} \times (1 + \frac{0.01}{12}) \times  \dotsb \times (1 +  \frac{0.01}{12}) = 100\mbox{万円} \times (1 + \frac{0.01}{12})^{12} = 101.004596089
 \]
-という結果が得られます.\footnote{電卓で計算する場合は $1.00083333 \times\  = \ = \ = \ = \cdots $と$=$ボタンを連打すると計算できます}
+という結果が得られます.\footnote{電卓で計算する場合は $1.00083333 \times\  = \ = \ = \ = \dotsb $と$=$ボタンを連打すると計算できます}
 また数字に着目すると,利息$12$回払いのときのほうがやはり僅かにお金は多くなっています.\\
 では,もっとお金を増やしたい!!ということで,$1$日に$1$回利息が振り込まれるような銀行を考えてみるとどうでしょうか,
 \[
@@ -438,14 +438,14 @@ $ k(u + v) = ku + kv , (k+l)u= ku + lu ,(kl)u = k(lu), 1u = u$
 これも長さにとって当然成り立って欲しい性質を述べただけとなりました.そして,バナッハ空間の$1$つ目の性質{\bf ノルム空間}とは,長さが定義された空間ということでした.\\
 続いて完備性について,触れてみましょう.
 \defb
-ノルム空間$X$の元の列,$x_n \ (n=1,2,\cdots)$がコーシー列であるとは次を満たすことである.
+ノルム空間$X$の元の列,$x_n \ (n=1,2,\dotsc)$がコーシー列であるとは次を満たすことである.
 \[
 \| x_n - x_m \| \to 0 \ (n,m \to \infty)
 \]
 である.
 \defx
-つまり,ある点列\footnote{高校数学でいうところの数列であるが,ここで列をなしているものは空間上の点であるので,点列という}の間の距離がどんどん小さくなっているというが,コーシー列であるということの定義です.\footnote{コーシー列の詳しい話については,この$episode$の前田さんの記事｢割り算再考｣にも書いてありますが,もう一度触れてみます.}ある数列が収束しているとき,これはコーシー列になりますが,
-逆に{\bf 一般にコーシー列は収束列ではありません}.例えば,$\Q$という有理数全体の空間を考えて,$3,3.1,3.14,3.141,3.1415,\cdots$という風に$\pi$にどんどん近づいて行くような数列を考えます.
+つまり,ある点列\footnote{高校数学でいうところの数列であるが,ここで列をなしているものは空間上の点であるので,点列という}の間の距離がどんどん小さくなっているというが,コーシー列であるということの定義です.\footnote{コーシー列の詳しい話については,この$episode$の前多さんの記事｢割り算再考｣にも書いてありますが,もう一度触れてみます.}ある数列が収束しているとき,これはコーシー列になりますが,
+逆に{\bf 一般にコーシー列は収束列ではありません}.例えば,$\Q$という有理数全体の空間を考えて,$3,3.1,3.14,3.141,3.1415,\dotsc$という風に$\pi$にどんどん近づいて行くような数列を考えます.
 この数列の間はどんどん$0$へと近づいていきますが,その収束先の$\pi$は有理数ではないため,収束先はありません.よって,この数列は収束列ではないのです
 \footnote{これは空間を$\Q$で考えたからであり,もちろん$\R$という実数の空間で考えるとこの数列は収束します}.
 \defb
