sp1パズルを追加

--- a/KOMABA2016/main.tex
+++ b/KOMABA2016/main.tex
@@ -144,6 +144,7 @@
 %\input{example}
 
 {\itomacro\input{ito}}
+\input{yamamoto}
 \input{warizan}
 \input{arata}
 \cftaddtitleline{toc}{chapter}{圏論が分かる4コマ漫画(小林)}{章間}
