大澤の原稿を微調整

--- a/KOMABA2016/main.tex
+++ b/KOMABA2016/main.tex
@@ -145,6 +145,10 @@
 
 {\itomacro\input{ito}}
 \input{yamamoto}
+\input{osawaenquete}
+\input{osawaalg}
+\input{osawageo}
+\input{osawaanalysis}
 \input{warizan}
 \input{arata}
 \cftaddtitleline{toc}{chapter}{圏論が分かる4コマ漫画(小林)}{章間}
