--- a/KOMABA2016/osawaanalysis.tex
+++ b/KOMABA2016/osawaanalysis.tex
@@ -1,17 +1,17 @@
-\Chapter{解析}
-\Section{はじめに}
+\Section{解析}
+\Subsection{はじめに}
 高校生までの解析学では、初等関数と呼ばれる基本的な関数だけを 扱ってきました。$x^n,e^x,\log x,\sin x,\arcsin x,$etc...や、及びその合成関数を興味の対象として、収束や極限、とくに微分積分を利用して性質を調べてきました。\\
 しかしそもそも関数とは何だったかというと、「ある変数$x$に対して出力$y$を対応させるルール」というだけのルールだったので、例えば入力する変数は実数だけでなく複素数やいくつかの実数の組み合わせも考えられます。\\
 さらに、出力の規則もたとえば
-\[
+\begin{equation*}
   f(x) = \begin{cases}
     1 & (xは有理数) \\
     0 & (xは無理数)
   \end{cases}
-\]
+\end{equation*}
 という、すべての点で不連続な関数が考えられます。さらに
 \[
-　w(x) = \sum_{n=0}^\infty a^n \cos(b^n \pi x) & (0<a<1,bは正の奇数整数)
+　w(x) = \sum_{n=0}^\infty a^n \cos(b^n \pi x) \  (0<a<1,bは正の奇数整数)
 \]
 とおけば、連続関数にもかかわらずほとんどの点で微分不可能であるような関数が出来上がります(ワイエルシュトラス関数)。このような"病的な関数"も解析学の範疇として考えなければなりません。\\
 大学に入学してしばらくは、収束、極限、微分積分に関するをもっと厳密に証明していきます。極限を扱う際に現れるのが、有名な{\bf $\epsilon - \delta$ 論法}です。東大では昨年、「$\epsilon - \delta$ 論法は人類の常識ですよ??」というコピペが生まれました。なので詳しく知りたい人は、駒場祭を歩いている東大生を捕まえて聞いてみてください。\\
@@ -27,7 +27,7 @@ y'' + 5y' + 6y = x^2
 \]
 が、任意の$y_1,y_2$に対してある定数$K$が存在して成立しているとき、{\bf リプシッツ条件}を満たしているといい、解となる関数の一意性が保障されます。このような話を好むか好まないかで、進学する学部も変わってくるのでしょう。また、この微分方程式が多変数になった偏微分方程式になれば、これは3年の数学科の授業で学ぶ発展的な分野になります。\\
 
-\Section{ルベーグ積分}
+\Subsection{ルベーグ積分}
 先ほど、有理数で1をとり無理数で0をとる関数を考えましたが、こういった関数の積分はどうやって行うのでしょうか。これは、縦に長い短冊をいっぱい作って面積を求めるリーマン積分では求めるのが難しいです。\\
 このようなときに役に立つのが、より多くの関数を積分できる{\bf ルベーグ積分}です。ですがこのルベーグ積分を扱う際に準備が必要なのが、{\bf 測度}と呼ばれる概念です。数学科のルベーグ積分の講義の半分くらいは、この測度に関する定理の証明になっています。\\
 測度というのは、面積、体積といった大きさに関する概念を一般化したものです。集合$X$の部分集合族$A$があった時に、その大きさを測る関数を考えるのですが、次のような性質を満たしているものとします。\\
@@ -43,7 +43,7 @@ $\o$を空集合、$E_1,E_2,E_3...$をどの二つも互いに共通部分を持
 勘のいい人は気づいたのかもしれませんが、ルベーグ積分というのはこのように可測集合上で、可測関数と呼ばれるもの(よほどヤバい定義をしなければ大概の関数は可測です)の積分を考えます。つまりざっくり言うと、関数の値にその値をとる集合の測度を掛け算して積分値を考えます。つまり冒頭に出てきた関数は、値1をとる有理数の集合は測度0であるため、あの関数の計算結果はどう頑張っても0になってしまいます。\\
 このように新しい積分を定義することによって、今まで扱えなかった関数を扱うことができます。そこでこれ以降の解析では、関数を集めた関数空間を考えて、性格のいい関数、悪い関数というのを考えていきます。具体的には、負の無限大から正の無限大まで積分しても発散しない・無限回微分できてなめらか・そもそも関数の値が0以外を取る部分が限られている(コンパクト台)…といったものが"性格のいい関数"と呼ばれています。ちなみに筆者の研究の話になるのですが、『関数空間』というからにはベクトル空間のように正規直交な基底を考えることができるのではないか、と思って、特に先ほどのような性格のいい正規直交基底は作れないか、と考える研究をしています。性格のいい関数をつかえば、その線形結合で関数を再現することができ、さらに係数の計算もかなり楽になります。
 
-\Section{複素関数}
+\Subsection{複素関数}
 解析分野でもうひとつ扱うトピックが、複素関数です。定義域も値も複素数になるような関数を考えるのですが、数学科では必修で１年間かけてその世界に足を踏み入れます。\\
 まず、複素関数の微分を考えます。微分可能な複素関数は{\bf 正則関数}といい、正則関数であれば{\bf Cauchy-Riemann方程式}という関係式が成り立ちます。$f(x+iy)=u(x,y)+iv(x,y)$とおくとき、
 \[
