--- a/KOMABA2016/osawaanalysis.tex
+++ b/KOMABA2016/osawaanalysis.tex
@@ -13,7 +13,7 @@
 \[
 　w(x) = \sum_{n=0}^\infty a^n \cos(b^n \pi x) \  (0<a<1,bは正の奇数整数)
 \]
-とおけば、連続関数にもかかわらずほとんどの点で微分不可能であるような関数が出来上がります(ワイエルシュトラス関数)。このような"病的な関数"も解析学の範疇として考えなければなりません。\\
+とおけば、連続関数にもかかわらずほとんどの点で微分不可能であるような関数が出来上がります(ワイエルシュトラス関数)。このような``病的な関数"も解析学の範疇として考えなければなりません。\\
 大学に入学してしばらくは、収束、極限、微分積分に関するをもっと厳密に証明していきます。極限を扱う際に現れるのが、有名な{\bf $\epsilon - \delta$ 論法}です。東大では昨年、「$\epsilon - \delta$ 論法は人類の常識ですよ??」というコピペが生まれました。なので詳しく知りたい人は、駒場祭を歩いている東大生を捕まえて聞いてみてください。\\
 
 
@@ -31,17 +31,17 @@ y'' + 5y' + 6y = x^2
 先ほど、有理数で1をとり無理数で0をとる関数を考えましたが、こういった関数の積分はどうやって行うのでしょうか。これは、縦に長い短冊をいっぱい作って面積を求めるリーマン積分では求めるのが難しいです。\\
 このようなときに役に立つのが、より多くの関数を積分できる{\bf ルベーグ積分}です。ですがこのルベーグ積分を扱う際に準備が必要なのが、{\bf 測度}と呼ばれる概念です。数学科のルベーグ積分の講義の半分くらいは、この測度に関する定理の証明になっています。\\
 測度というのは、面積、体積といった大きさに関する概念を一般化したものです。集合$X$の部分集合族$A$があった時に、その大きさを測る関数を考えるのですが、次のような性質を満たしているものとします。\\
-$\o$を空集合、$E_1,E_2,E_3...$をどの二つも互いに共通部分を持たないAに属する集合の列としたとき、
+$\emptyset$を空集合、$E_1,E_2,E_3,\dotsc$をどの二つも互いに共通部分を持たない $A$ に属する集合の列としたとき、
 \[
-\mu (\o) = 0
+\mu (\emptyset) = 0
 \]
 \[
 \mu (\cup_i E_i) = \sum_{i=1} \mu (E_i)
 \]
 を満たす関数$\mu$を測度と呼び、$A$の元を可測集合、測度が定義された空間を測度空間と呼びます。\\
 測度というのはいろんな集合にたくさんの種類定義できるのですが、ここでは実数上に{\bf ルベーグ測度}と呼ばれるものを考えます。2次元なら面積、3次元なら体積にあたるものとほぼ考えてもらっても構わないのですが、きちんと定義することによって、様々な性質が明らかになります。集合論の知識も合わせて考えると、実数という詰まった集合の中で、たとえば{1,2}みたいな有限集合や、整数の集合のようなスカスカの集合、さらに有理数の集合でさえも、測度はすべて0になってしまうのです。\\
-勘のいい人は気づいたのかもしれませんが、ルベーグ積分というのはこのように可測集合上で、可測関数と呼ばれるもの(よほどヤバい定義をしなければ大概の関数は可測です)の積分を考えます。つまりざっくり言うと、関数の値にその値をとる集合の測度を掛け算して積分値を考えます。つまり冒頭に出てきた関数は、値1をとる有理数の集合は測度0であるため、あの関数の計算結果はどう頑張っても0になってしまいます。\\
-このように新しい積分を定義することによって、今まで扱えなかった関数を扱うことができます。そこでこれ以降の解析では、関数を集めた関数空間を考えて、性格のいい関数、悪い関数というのを考えていきます。具体的には、負の無限大から正の無限大まで積分しても発散しない・無限回微分できてなめらか・そもそも関数の値が0以外を取る部分が限られている(コンパクト台)…といったものが"性格のいい関数"と呼ばれています。ちなみに筆者の研究の話になるのですが、『関数空間』というからにはベクトル空間のように正規直交な基底を考えることができるのではないか、と思って、特に先ほどのような性格のいい正規直交基底は作れないか、と考える研究をしています。性格のいい関数をつかえば、その線形結合で関数を再現することができ、さらに係数の計算もかなり楽になります。
+勘のいい人は気づいたのかもしれませんが、ルベーグ積分というのはこのように可測集合上で、可測関数と呼ばれるもの(よほどヤバい定義をしなければ大概の関数は可測です)の積分vを考えます。つまりざっくり言うと、関数の値にその値をとる集合の測度を掛け算して積分値を考えます。つまり冒頭に出てきた関数は、値1をとる有理数の集合は測度0であるため、あの関数の計算結果はどう頑張っても0になってしまいます。\\
+このように新しい積分を定義することによって、今まで扱えなかった関数を扱うことができます。そこでこれ以降の解析では、関数を集めた関数空間を考えて、性格のいい関数、悪い関数というのを考えていきます。具体的には、負の無限大から正の無限大まで積分しても発散しない・無限回微分できてなめらか・そもそも関数の値が0以外を取る部分が限られている(コンパクト台)…といったものが``性格のいい関数"と呼ばれています。ちなみに筆者の研究の話になるのですが、『関数空間』というからにはベクトル空間のように正規直交な基底を考えることができるのではないか、と思って、特に先ほどのような性格のいい正規直交基底は作れないか、と考える研究をしています。性格のいい関数をつかえば、その線形結合で関数を再現することができ、さらに係数の計算もかなり楽になります。
 
 \Subsection{複素関数}
 解析分野でもうひとつ扱うトピックが、複素関数です。定義域も値も複素数になるような関数を考えるのですが、数学科では必修で１年間かけてその世界に足を踏み入れます。\\
@@ -72,7 +72,7 @@ f(z) = \frac{1}{2 \pi i} \int_{\partial D} {\frac{f(\zeta)}{\zeta - z}} d\zeta
 \]
 というものが求まります。
 さらにもうひとつ美しい定理として、{\bf 一致の定理}が挙げられます。2つの正則関数$f,g$があって、これらが集積点(孤立していない点)をもつ集合上で一致しているとき、これらの関数はまるまるすべての区間で一致するというものです。つまり、ほんの少しの長さの線、ほんの少しの面積の領域で正則な関数が一致していれば、これらは広い広い複素平面の多くで一致してしまう、というものです。更にそれを発展させて、fが限られた集合でしか定義されていなくても、先のように集積点をもつ集合上で一致する関数gをもう一つ考えれば、fはgと同じくらいまで拡張できるということです。これが{\bf 解析接続}というものです。解析接続の詳しいことは、複素関数の後半の授業で本格的に扱います。\\
-また、逆関数も含めて両方向に正則な{\bf 双正則写像}を考えれば、複素関数の美しい世界はさらに広がります。任意の単連結な領域はその任意の点$z_0$に対し、原点まわり半径1にうつし合う双正則写像fで
+また、逆関数も含めて両方向に正則な{\bf 双正則写像}を考えれば、複素関数の美しい世界はさらに広がります。任意の単連結な領域はその任意の点$z_0$に対し、原点まわり半径1にうつし合う双正則写像 $f$ で
 \[
 f(z_0) = 0,f'(z_0) > 0 
 \]
