大澤くんの原稿に手を加えた。
- 強制改行を使わない。
- {\bf ...} の代わりに \textbf{...} を使う。
- 連続した \[ \] の代わりに gather* 環境を使う。

など。

--- a/KOMABA2016/osawageo.tex
+++ b/KOMABA2016/osawageo.tex
@@ -1,44 +1,53 @@
 \Section{幾何}
 \Subsection{はじめに}
-幾何というと図形問題。高校数学まではその一言で片づけられる気がします。\\
-初等幾何学の中にも実は様々な種類があるのですが、おそらく馴染みがあるのはユークリッド幾何学と座標幾何学だと思います。ユークリッド幾何学とは、いわゆる直感的な平面・空間の上で図形の性質を調べるものです(えらく曖昧な定義ですが)。直線はどこまでも伸ばせるし、平行線はいつまでも交わらず並行であり続ける。こういった「現実で当たり前なこと」を公理として確立し、そのうえで定理を導いていくものです。\\
-また図形を座標の上に乗せれば解析幾何学になります。図形を定式化し、解析の立場から図形を調べていくのですが、高校の範囲ではユークリッド幾何を座標に乗せるという作業にとどまっています。\\
-ユークリッド幾何があれば、非ユークリッド幾何もあります。たとえば平行線をユークリッド平面でなく球面上に引いた場合、それらは交わってしまうでしょう(地球上の経線が北極・南極で交わっているように)。曲線や曲面の上で幾何学を考える場合、曲率という概念が大事になってきます。曲率とはその名の通り「曲がり具合」で、たとえば半径$r$の円周の曲率は$1/r$です。この概念は、大学2年の数学で『ベクトル解析』という分野を扱う中で現れます。\\
+幾何というと図形問題。高校数学まではその一言で片づけられる気がします。
+
+初等幾何学の中にも実は様々な種類があるのですが、おそらく馴染みがあるのはユークリッド幾何学と座標幾何学だと思います。ユークリッド幾何学とは、いわゆる直感的な平面・空間の上で図形の性質を調べるものです(えらく曖昧な定義ですが)。直線はどこまでも伸ばせるし、平行線はいつまでも交わらず並行であり続ける。こういった「現実で当たり前なこと」を公理として確立し、そのうえで定理を導いていくものです。
+
+また図形を座標の上に乗せれば解析幾何学になります。図形を定式化し、解析の立場から図形を調べていくのですが、高校の範囲ではユークリッド幾何を座標に乗せるという作業にとどまっています。
+
+ユークリッド幾何があれば、非ユークリッド幾何もあります。たとえば平行線をユークリッド平面でなく球面上に引いた場合、それらは交わってしまうでしょう(地球上の経線が北極・南極で交わっているように)。曲線や曲面の上で幾何学を考える場合、曲率という概念が大事になってきます。曲率とはその名の通り「曲がり具合」で、たとえば半径$r$の円周の曲率は$1/r$です。この概念は、大学2年の数学で『ベクトル解析』という分野を扱う中で現れます。
+
 これらがすべて初等幾何学と呼ばれているものなのですが、数学科に進学するとそれに対して『現代幾何学』というものを扱うようになります。3年生の必修科目「幾何学1」で、現代数学の一つの大きなトピック『多様体』を扱うのですが、それを扱うためにはまた準備が要ります。
 
 
 \Subsection{位相の導入}
-数学の世界で位相というと、``phase"と``topology"という2つの単語がヒットします。三角関数を扱うときに出てくる位相という言葉はphaseの方ですが、現代幾何学を扱うのに必要なのはtopology(トポロジー)です。トポロジーという言葉は、「進んだ数学のよくわからない概念」として世間では独り歩きしているとことがあります。「トポロジーという概念の中では、ドーナツとコーヒーカップは同じ図形だ」とか、「やわらかい幾何学」と呼ばれるとか、インパクトの強いフレーズを耳にすることはあるでしょうが、その実態は結局わからない、という人も多いのではないでしょうか。\\
-ある集合を考えます。元がいくつも(無限個かもしれない)入った容器です。それぞれの元がバラバラ、無関係であれば話はそこで終わりなのですが、その元どうしで互いに関係があった場合、位相を入れられるチャンスです。たとえば、実数の集合では、2つの実数を取り出せばこれらの``距離"を測ることができます。この``距離"やら``極限"やらの概念を組み合わせて、``連続"という概念を生み出すことができます。この``距離"``極限"``連続"という概念を一般化するのが位相の果たす役割だと思ってください。\\
+数学の世界で位相というと、``phase"と``topology"という2つの単語がヒットします。三角関数を扱うときに出てくる位相という言葉はphaseの方ですが、現代幾何学を扱うのに必要なのはtopology(トポロジー)です。トポロジーという言葉は、「進んだ数学のよくわからない概念」として世間では独り歩きしているとことがあります。「トポロジーという概念の中では、ドーナツとコーヒーカップは同じ図形だ」とか、「やわらかい幾何学」と呼ばれるとか、インパクトの強いフレーズを耳にすることはあるでしょうが、その実態は結局わからない、という人も多いのではないでしょうか。
+
+ある集合を考えます。元がいくつも(無限個かもしれない)入った容器です。それぞれの元がバラバラ、無関係であれば話はそこで終わりなのですが、その元どうしで互いに関係があった場合、位相を入れられるチャンスです。たとえば、実数の集合では、2つの実数を取り出せばこれらの``距離"を測ることができます。この``距離"やら``極限"やらの概念を組み合わせて、``連続"という概念を生み出すことができます。この``距離"``極限"``連続"という概念を一般化するのが位相の果たす役割だと思ってください。
+
 もう少しだけ詳しく言うために、まずは『開集合』をいうものを思い出してください。実数上の開集合と言えば、たとえば$(0,2)$みたいな端っこを含まない区間が挙げられます(もっと厳密な定義はあるのですがここでは割愛)。『位相』にきっかけは、実数とは限らない集合に対して、「こういうものは``開集合"だよ！」と宣言すること。その宣言のうち、厳密に書いたときに以下を満たす「質が良い」ものを位相と言います。
 
-集合$X$がOを開集合系とする位相空間であるとは、
-\[
-\emptyset \in O かつ X \in O
-\]
-\[
-\forall A,B \in O \Rightarrow A \cap B \in O
-\]
-\[
+集合$X$が $O$ を開集合系とする位相空間であるとは、
+\begin{gather*}
+\emptyset \in O かつ X \in O \\
+\forall A,B \in O \Rightarrow A \cap B \in O \\
 \forall \{A_\lambda\}_{\lambda \in \Lambda} \subset {\cap}_{\lambda \in \Lambda} A_\lambda \in O
-\]
+\end{gather*}
 をみたすことである。
 
-噛み砕くと、「空集合と全体集合は``開集合"だよ」「``開集合"がふたつあれば、その共通部分は``開集合"だよ」「有限個でも無限個でもよいので、``開集合"の和集合をとれば``開集合"だよ」というルールをみたす宣言をすれば、それが位相になります。\\
-あんまりおもしろくない例を挙げると、「空集合と全体集合だけが開集合だよ！」「部分集合は全部開集合だよ！」という宣言から、位相空間がつくられます。このような位相をそれぞれ『密着位相』『離散位相』といいます。もうすこし非自明な例を挙げると、$X = \{1,2,3\}$という集合に「$\emptyset,\{1\},\{2\},\{1,2\},X,$の5つだけが開集合だ！」という宣言をすれば位相空間になります。元が3つだけのXという空間でも、位相の入れ方は29通りあります。\\
-このような位相空間の中では、『連続写像』というのが「写像でうつされた結果が開集合なら、元の集合も開集合である」という言葉で特徴づけられます。皆よく知っている距離の入った空間では、この連続性も皆よく知っている``連続"につながることが証明できます。さらに2つの位相空間の間に、逆写像も含めて両方向に連続な1対1写像があるとき、2つの位相空間は『位相同型』『同相』であるといい、同じように扱います。これが、「ドーナツとコーヒーカップは同じ図形だ」というフレーズの所以なのです。\\
+噛み砕くと、「空集合と全体集合は``開集合"だよ」「``開集合"がふたつあれば、その共通部分は``開集合"だよ」「有限個でも無限個でもよいので、``開集合"の和集合をとれば``開集合"だよ」というルールをみたす宣言をすれば、それが位相になります。
+
+あんまりおもしろくない例を挙げると、「空集合と全体集合だけが開集合だよ！」「部分集合は全部開集合だよ！」という宣言から、位相空間がつくられます。このような位相をそれぞれ『密着位相』『離散位相』といいます。もうすこし非自明な例を挙げると、$X = \{1,2,3\}$という集合に「$\emptyset,\{1\},\{2\},\{1,2\},X,$の5つだけが開集合だ！」という宣言をすれば位相空間になります。元が3つだけの $X$ という空間でも、位相の入れ方は29通りあります。
+
+このような位相空間の中では、『連続写像』というのが「写像でうつされた結果が開集合なら、元の集合も開集合である」という言葉で特徴づけられます。皆よく知っている距離の入った空間では、この連続性も皆よく知っている``連続"につながることが証明できます。さらに2つの位相空間の間に、逆写像も含めて両方向に連続な1対1写像があるとき、2つの位相空間は『位相同型』『同相』であるといい、同じように扱います。これが、「ドーナツとコーヒーカップは同じ図形だ」というフレーズの所以なのです。
+
 長くなったのでこのぐらいにしておくのですが、このトポロジーの知識に代数的な手法を加えれば、『ホモトピー』『ホモロジー』と呼ばれる概念になります。1900年前後に、ポアンカレという数学者(ポアンカレ予想で有名ですね)が導入した概念で、数学科では3年の後半以降に学習する難解な理論です。
 
 \Subsection{多様体}
-位相という概念を準備すれば、多様体を定義することができます。しかし多様体の定義はかなりゴツいので、詳しいことは専門書にお任せして、ふわっと理解してもらうための説明にとどめます。\\
+位相という概念を準備すれば、多様体を定義することができます。しかし多様体の定義はかなりゴツいので、詳しいことは専門書にお任せして、ふわっと理解してもらうための説明にとどめます。
+
 多様体の考え方は、球面をはじめとした非ユークリッドのグニャグニャ歪んだ空間上の幾何を、なんとかユークリッドな座標上の計算で片づけられないか、という考え方が元になっています。地球を平面地図で再現することを考えるのがイメージしやすいでしょう。1枚の紙に地図をまとめようとすると、縮尺が極端に違う箇所が生まれてしまいあまりいい地図とは言えません。計算しようとしてもかなり不正確になるでしょう。これをどのように避けるかというと、地球(球面)をいくつかの開集合に分割して、それぞれに対して別々の平面地図を与えてやろうという考え方です。
 $M$を位相空間とするとき、$M$の開集合$U$から$m$次元ユークリッド空間の開集合$V$への同相写像
 \[
 \phi : U \rightarrow V
 \]
-を『局所座標系』と呼びます。$U$上に局所座標系が定義されていることを$(U,\phi)$という対で表し、$m$次元座標近傍と呼びます。歪んだ図形上のすべての点を、この座標近傍を使ってユークリッド座標たちの上で話を進められれば、だいたい解決です。\\
-ただいくつか条件を追加しなければならなくて、ひとつは$M$は位相空間は位相空間でも『ハウスドルフ空間』と呼ばれるものでなければなりません。ハウスドルフ空間とは、「異なる位置にある点がその点を含む開集合によって分離できる」空間のことを指します。$n$ 次元の座標空間はハウスドルフなので、「そこそこ性格のいい位相空間」を表現するための言い回しのひとつだと思ってもらって構いません。更にもうひとつ、座標近傍を作る際に位相空間を開集合たちで分割するときに、開集合同士の``ダブり"が存在すると思うのですが、ダブってる集合の間に連続だったり、微分可能で滑らかな写像が存在していることが大事です。これが滑らかであれば、特に『可微分多様体』と呼ばれ、3年生の多様体論では無限回微分可能なときを考えることが多いです。\\
-3年生の前期の授業「幾何学1」では、多様体を定義していくつか例を挙げた後、『逆写像定理』『員関数定理』と呼ばれる重要な定理を学びます。これらはベクトル解析の授業でも扱うのですが、多様体というより一般的な空間を扱うことになるので主張文も変わってきます。さらに、座標平面上の関数であれば「接線」、座標空間上の関数であれば「接平面」を考えましたが、もっと一般的に『接空間』にあたる概念を導入します。また、これもベクトル解析でも扱うのですが、多様体上の『ベクトル場』を導入します。ベクトル場は簡単なものなら電磁気を学習している中に出てきますが、これもより一般的に使えるように定義を考えていきます。\\
+を『局所座標系』と呼びます。$U$上に局所座標系が定義されていることを$(U,\phi)$という対で表し、$m$次元座標近傍と呼びます。歪んだ図形上のすべての点を、この座標近傍を使ってユークリッド座標たちの上で話を進められれば、だいたい解決です。
+
+ただいくつか条件を追加しなければならなくて、ひとつは$M$は位相空間は位相空間でも『ハウスドルフ空間』と呼ばれるものでなければなりません。ハウスドルフ空間とは、「異なる位置にある点がその点を含む開集合によって分離できる」空間のことを指します。$n$ 次元の座標空間はハウスドルフなので、「そこそこ性格のいい位相空間」を表現するための言い回しのひとつだと思ってもらって構いません。更にもうひとつ、座標近傍を作る際に位相空間を開集合たちで分割するときに、開集合同士の``ダブり"が存在すると思うのですが、ダブってる集合の間に連続だったり、微分可能で滑らかな写像が存在していることが大事です。これが滑らかであれば、特に『可微分多様体』と呼ばれ、3年生の多様体論では無限回微分可能なときを考えることが多いです。
+
+3年生の前期の授業「幾何学1」では、多様体を定義していくつか例を挙げた後、『逆写像定理』『陰関数定理』と呼ばれる重要な定理を学びます。これらはベクトル解析の授業でも扱うのですが、多様体というより一般的な空間を扱うことになるので主張文も変わってきます。さらに、座標平面上の関数であれば「接線」、座標空間上の関数であれば「接平面」を考えましたが、もっと一般的に『接空間』にあたる概念を導入します。また、これもベクトル解析でも扱うのですが、多様体上の『ベクトル場』を導入します。ベクトル場は簡単なものなら電磁気を学習している中に出てきますが、これもより一般的に使えるように定義を考えていきます。
+
 ぐにゃぐにゃした空間を相手にするので、当然イメージに頼るのは難しく、座標にうつすという行為を正しく理解する必要があります。しかしこれを理解すればさらに奥深い幾何の世界に潜入することができ、未知の世界がまっていることでしょう。
 
 %幾何学者と呼ばれる人の殆どは「多様体」について研究している.ここで,重要なのは多様体のどのような性質にスポットライトを当てて研究するかである.{\bf 位相幾何学}と呼ばれる学問は,連続的に変形する\footnote{例えば,ある線を切ってしまうとそこで線分が連続ではなくなってしまうので連続的な変形ではないが,力を加えて少しだけ曲げることは連続的な変形である.}ことによって変わらない性質について研究する.例えば,目の前にボールと浮き輪があったときに,我々はこの2つが違うことが認識できるが,何が違うかについて考えたり,浮き輪とコップがあったときにこれらについて共通している性質は何かについて考えたりする.こうすることによって,世の中にある数学的対象を分類することができ,分類することはこの世界を理解することに近づく.分類することは理解を深めるということについては,ポアンカレ予想について考えると良い.ポアンカレ予想とは,「単連結な3次元閉多様体は3次元球面に同相である」という予想であるが,2002年ごろにペレルマンによって解決された.これにより,位相幾何学者にとっては,単連結な3次元閉多様体はすべて3次元球面と同じものであると言うことがわかったのである.
