誤植と思わしき箇所の校正

--- a/KOMABA2016/warizan.tex
+++ b/KOMABA2016/warizan.tex
@@ -2,7 +2,7 @@
 
 
 小学校以来習ってきた割り算の概念をもう一度考えてみると，実は数学の概念に
-繋がっているとがわかります．高校生にでもわかるよう配慮して書いたつもりですが，*がついている項目は大
+繋がっていることがわかります．高校生にでもわかるよう配慮して書いたつもりですが，*がついている項目は大
 学1,2年を想定して，**がついている項目は大学3,4年を想定して書いています．
 
 
@@ -320,7 +320,7 @@ $\mathbb{Z}\times(\mathbb{Z}-\{0\})=\{(a,b)\ |\
  $\mathbb{Z}\times(\mathbb{Z}-\{0\})/\mathord{\sim}$を有理数$\mathbb{Q}$と定める．
  さらに，$\mathbb{Q}$上の加法と乗法を，
  \[
-  [(a,b)]+[(c,d)]=[(a+c,b+d)]\hspace{1cm}[(a,b)]\times[(c,d)]=[(ac,bd)]
+  [(a,b)]+[(c,d)]=[(ad+bc,bd)]\hspace{1cm}[(a,b)]\times[(c,d)]=[(ac,bd)]
  \]
  と定める\footnote{これもwell-definedであることをチェックする必要があります．示してみてください．}．
 \end{defi}
@@ -346,7 +346,7 @@ $\sim$の同値関係は，外項と内項の積が等しい，つまり，$a:b=
 
 \Subsection{有理数から実数}
 
-さて，最後に実数を作ってみましょう．これはかなり困難です．実数の構成には，代表的なものでDedekint cutによるものと，有理数の完備化の二つがあるのですが，今回は有理数の完備化を解説したいと思います．
+さて，最後に実数を作ってみましょう．これはかなり困難です．実数の構成には，代表的なものでDedekind cutによるものと，有理数の完備化の二つがあるのですが，今回は有理数の完備化を解説したいと思います．
 \begin{defi}[Cauchy列]
  数列$\{a_n\}$がCauchy列であるとは，以下のことを言う．
  \[
