Update伊藤,前書き

--- a/KOMABA2016/maegaki.tex
+++ b/KOMABA2016/maegaki.tex
@@ -1,14 +1,29 @@
-本日は「数学科展示　ますらぼ」にご来場いただき誠にありがとうございます．今年5月に東京大学本郷キャンパスで開かれた五月祭に引き続き，
-皆さんに数学と東大数学科について知ってもらいたくて，数学科展示ますらぼは駒場祭にも出展することを決めました．
-今回の冊子$e\pi isode$(えぴそーど)は，vol 3.5と題して発行され，またサブタイトルは「わたしのえぴそーど」と題しまして，数学科内定したばかりのの学部$2$年生，
-先日発表された数学講究XAに夢をふくらませる$3$年生，院試を終えたばかりの$4$年生，そしてこの企画が始まって以来ずっとコミットしてきた修士$1$年生という
-幅広い層の方たちに自分が好きなものとそのエピソードについて語ってもらいました．執筆者のみなさんには$1$ページから$2$ページで軽く書いてくれるだけで良いよと言っていたのですが，
-募集からわずか$2$週間というとても短い期間でみなさんこれだけたくさんの内容を書いてくださり，またしても濃い内容の冊子が出来上がりました．
+数学科喫茶ますらぼにお越し頂き誠にありがとうございます.
+そうなんです,「喫茶」になったんです.別に喫茶要素をメインにするつもりはなくて,おまけでつけただけのお粗末なものですが,
+コーヒー・紅茶・ジュースなどありますので是非ゆっくりしていってください.\par
 
-数学科はこの駒場キャンパスの東の端にある数理科学研究棟で普段は活動していますが，皆さんからは ``数理病棟'' と呼ばれたり，他の学科の人に自分が今何を勉強しているのかを
-説明しようとすると全く理解してもらえなかったりと周囲から距離を感じることがあります．しかし，数学というのはとてもシンプルにまた何に縛られることもなく物事にアプローチをする手段であり，
-数学をすることによって培われる技能というのは普遍的でどこの分野に於いても通じるものであると私は信じていますし，その面白さは丁寧に話しあえば多くの人に理解してもらえるし，
-また他の分野と何か共通点があるものであると，この数学科展示ますらぼを通じて実感しています．この冊子を開くと数式や難しそうな言葉がたくさん並べてあって，
-``うわっ...'' っと一歩引いてしまう方も沢山いらっしゃいると思います．でも，そんな時は ``この何が面白いんですか'' や ``何の役に立つんですか'' といった
-質問でも良いので私たちに投げつけて見てください．きっと何か得るものはあると思います．
-（伊藤）
+今回で,我々数学科2015年度進学の4年生が主体となって開催する「ますらぼ」は3回目にして,最後になります.
+来年からは,僕たちの後輩たちが引き継いで,更に良いますらぼを開催してくれるだろうと期待しています.\par
+
+この冊子$e^{\pi i}sode$もついに第4号になりまして,トータルで見ると当企画も4年目になります.
+我々が最後に何か冊子を作るとなったときに,やはり数学の面白さを皆さんに伝えたいという気持ちが涌いてきてしまって,
+あまり難しい内容は触れずに皆さんに楽しんでもらえるような冊子を作ろうと頑張りました.
+しかし,数学の楽しさを伝えるのは難しく,やはり自分たちが面白いと思うような数学について書くと
+小難しい内容になってしまうので,とても悲しいですね.\par
+
+なぜ僕はこんなにも数学が好きなんだろうと思って考えたことがあるのですが,
+数学にはいうなれば,お城を自分の力で$0$から作っていくような楽しみがあると思いました.
+もしかしたら,エベレスト級のとても高い山に登っていくような楽しみかもしれません.
+数学科の授業は,わざわざ複素数を最初から定義したり,グラフがつながっているとは何なんだ,とか
+足し算って何なんだとか,そのレベルのことから始まります.
+最初は靄がかかっていて,上に何があるのかも分からない,お城の石垣から作っていくような,海抜$0$メートルからエベレストに挑戦するような苦しみが有ります.
+しかし,それを何年も続けていくと少しづつ世界が開けてきて,今まで見えなかった世界が見えてくるようになります.
+数学を続ける中で,こんなことがあったんだよ!こんなにきれいな風景が見えたんだよ!というみんなの感動の記録がこの$e^{\pi i}sode$なのかもしれません.
+お城を$0$から作り上げる苦しみも楽しさも,自分で体験してみないと分からないので,この冊子が皆さんに伝わりにくい内容になってしまったのはそのせいかもしれません.
+\par
+最後の冊子が皆さん全員に自信を持って薦めれるものにならなかったのはとても悔しいことなのですが,
+もしよかったら読んでみてください.読めなかったら,本棚の隅っこにでも置いてください,薄いです.
+もしかしたら何時か分かる日が来るかもしれません.もしくは,身の回りの数学が好きそうな人にでも渡してみてください.
+そんな人もいなさそうだったら,煮るなり焼くなり好きにしてください.
+\par
+(発行責任者 伊藤より)
