佐藤,こばけん,SP1追加.

--- a/KOMABA2016/ito.tex
+++ b/KOMABA2016/ito.tex
@@ -211,7 +211,7 @@ e := \lim_{h \to \infty} \biggl( 1 + \frac{1}{n}\biggl)^n
 微分方程式というのは「微分」と「方程式」という険しい言葉が2つも並んだものですが，
 とても有用であり，世の中の物理現象などの多くは微分方程式で記述されるぐらいに重要な概念です．
 この記事では，まず$e$と微分の関係について述べ，その後微分方程式について基本的なことを説明し，最後に幾つか実際に微分方程式を解くということをします．
-\Subection{微分方程式について}
+\Subsection{微分方程式について}
 \Subsubsection{e再考}
 
 \defb
