--- a/KOMABA2016/osawaenquete.tex
+++ b/KOMABA2016/osawaenquete.tex
@@ -1,4 +1,4 @@
-\Chapter{第一回　数学科意識調査！}
+\Chapter{第一回　数学科意識調査！(大澤)}
 数学科の人ってなに考えてるかわからない。数学のことしか考えてないの？そんなことを、よく言われてしまいます。
 そこで、今回は数学科のB3・B4、計18人にアンケートをとり、数学科に通う学生の生態を探りました。読み物程度に眺めてみてください。
 
