--- a/KOMABA2016/standard.sty
+++ b/KOMABA2016/standard.sty
@@ -1,5 +1,5 @@
 \theoremstyle{definition}
-\newtheorem{thm}{\sc Theorem}[subsection]
+\newtheorem{thm}{\sc Theorem}[]
 \newtheorem{prop}[thm]{\sc Proposition}
 \newtheorem{lem}[thm]{\sc Lemma}
 \newtheorem{cor}[thm]{\sc Corollary}
