前書きに手を加えた。
- 半角の , . を全角のものに直した。
- \par を直接書かない。

--- a/KOMABA2016/maegaki.tex
+++ b/KOMABA2016/maegaki.tex
@@ -1,29 +1,29 @@
-数学科喫茶ますらぼにお越し頂き誠にありがとうございます.
-そうなんです,「喫茶」になったんです.別に喫茶要素をメインにするつもりはなくて,おまけでつけただけのお粗末なものですが,
-コーヒー・紅茶・ジュースなどありますので是非ゆっくりしていってください.\par
+数学科喫茶ますらぼにお越し頂き誠にありがとうございます．
+そうなんです，「喫茶」になったんです．別に喫茶要素をメインにするつもりはなくて，おまけでつけただけのお粗末なものですが，
+コーヒー・紅茶・ジュースなどありますので是非ゆっくりしていってください．
 
-今回で,我々数学科2015年度進学の4年生が主体となって開催する「ますらぼ」は3回目にして,最後になります.
-来年からは,僕たちの後輩たちが引き継いで,更に良いますらぼを開催してくれるだろうと期待しています.\par
+今回で，我々数学科2015年度進学の4年生が主体となって開催する「ますらぼ」は3回目にして，最後になります．
+来年からは，僕たちの後輩たちが引き継いで，更に良いますらぼを開催してくれるだろうと期待しています．
 
-この冊子$e^{\pi i}sode$もついに第4号になりまして,トータルで見ると当企画も4年目になります.
-我々が最後に何か冊子を作るとなったときに,やはり数学の面白さを皆さんに伝えたいという気持ちが涌いてきてしまって,
-あまり難しい内容は触れずに皆さんに楽しんでもらえるような冊子を作ろうと頑張りました.
-しかし,数学の楽しさを伝えるのは難しく,やはり自分たちが面白いと思うような数学について書くと
-小難しい内容になってしまうので,とても悲しいですね.\par
+この冊子$e^{\pi i}sode$もついに第4号になりまして，トータルで見ると当企画も4年目になります．
+我々が最後に何か冊子を作るとなったときに，やはり数学の面白さを皆さんに伝えたいという気持ちが涌いてきてしまって，
+あまり難しい内容は触れずに皆さんに楽しんでもらえるような冊子を作ろうと頑張りました．
+しかし，数学の楽しさを伝えるのは難しく，やはり自分たちが面白いと思うような数学について書くと
+小難しい内容になってしまうので，とても悲しいですね．
 
-なぜ僕はこんなにも数学が好きなんだろうと思って考えたことがあるのですが,
-数学にはいうなれば,お城を自分の力で$0$から作っていくような楽しみがあると思いました.
-もしかしたら,エベレスト級のとても高い山に登っていくような楽しみかもしれません.
-数学科の授業は,わざわざ複素数を最初から定義したり,グラフがつながっているとは何なんだ,とか
-足し算って何なんだとか,そのレベルのことから始まります.
-最初は靄がかかっていて,上に何があるのかも分からない,お城の石垣から作っていくような,海抜$0$メートルからエベレストに挑戦するような苦しみが有ります.
-しかし,それを何年も続けていくと少しづつ世界が開けてきて,今まで見えなかった世界が見えてくるようになります.
-数学を続ける中で,こんなことがあったんだよ!こんなにきれいな風景が見えたんだよ!というみんなの感動の記録がこの$e^{\pi i}sode$なのかもしれません.
-お城を$0$から作り上げる苦しみも楽しさも,自分で体験してみないと分からないので,この冊子が皆さんに伝わりにくい内容になってしまったのはそのせいかもしれません.
-\par
-最後の冊子が皆さん全員に自信を持って薦めれるものにならなかったのはとても悔しいことなのですが,
-もしよかったら読んでみてください.読めなかったら,本棚の隅っこにでも置いてください,薄いです.
-もしかしたら何時か分かる日が来るかもしれません.もしくは,身の回りの数学が好きそうな人にでも渡してみてください.
-そんな人もいなさそうだったら,煮るなり焼くなり好きにしてください.
-\par
+なぜ僕はこんなにも数学が好きなんだろうと思って考えたことがあるのですが，
+数学にはいうなれば，お城を自分の力で$0$から作っていくような楽しみがあると思いました．
+もしかしたら，エベレスト級のとても高い山に登っていくような楽しみかもしれません．
+数学科の授業は，わざわざ複素数を最初から定義したり，グラフがつながっているとは何なんだ，とか
+足し算って何なんだとか，そのレベルのことから始まります．
+最初は靄がかかっていて，上に何があるのかも分からない，お城の石垣から作っていくような，海抜$0$メートルからエベレストに挑戦するような苦しみが有ります．
+しかし，それを何年も続けていくと少しづつ世界が開けてきて，今まで見えなかった世界が見えてくるようになります．
+数学を続ける中で，こんなことがあったんだよ！こんなにきれいな風景が見えたんだよ！というみんなの感動の記録がこの$e^{\pi i}sode$なのかもしれません．
+お城を$0$から作り上げる苦しみも楽しさも，自分で体験してみないと分からないので，この冊子が皆さんに伝わりにくい内容になってしまったのはそのせいかもしれません．
+
+最後の冊子が皆さん全員に自信を持って薦めれるものにならなかったのはとても悔しいことなのですが，
+もしよかったら読んでみてください．読めなかったら，本棚の隅っこにでも置いてください，薄いです．
+もしかしたら何時か分かる日が来るかもしれません．もしくは，身の回りの数学が好きそうな人にでも渡してみてください．
+そんな人もいなさそうだったら，煮るなり焼くなり好きにしてください．
+
 (発行責任者 伊藤より)
